# pyjupiter

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .yamllint  404.html  README.md  index.html  justfile  mkdocs.yml  package.json  pnpm-lock.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/: index.html
docs/: api-reference.md  api-reference.zh.md  examples.md  examples.zh.md  getting-started.md  getting-started.zh.md  index.md  index.zh.md
examples/: index.html  utils.py
examples/advanced/: concurrent_example.py  proxy_example.py
examples/balances/: async_main.py  main.py
examples/order-and-execute/: async_main.py  main.py
examples/shield/: async_main.py  main.py
getting-started/: index.html
pyjupiter/: __init__.py  exceptions.py
pyjupiter/clients/: base_ultra_client.py  jupiter_client.py  ultra_api_client.py
pyjupiter/models/: base_model.py
pyjupiter/models/common/: dex_enum.py
pyjupiter/models/ultra_api/: ultra_execute_request_model.py  ultra_order_request_model.py
search/: search_index.json
tests/: conftest.py  test_client_functionality.py  test_ultra_balances.py  test_ultra_order_and_execute.py  test_ultra_shield.py  utils.py
zh/: index.html
zh/api-reference/: index.html
zh/examples/: index.html
zh/getting-started/: index.html
